@@ -32,6 +32,7 @@ AC_CHECK_HEADERS(db.h ctype.h errno.h fcntl.h grp.h inttypes.h netdb.h pwd.h reg
 
 dnl Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
+AC_C_VOLATILE
 AC_STRUCT_TM
 AC_TYPE_MODE_T
 AC_TYPE_PID_T
@@ -91,6 +92,16 @@ AC_CHECK_LIB(wrap,main,[
 	])
 AC_SUBST(LIBWRAPLIBS)
 AC_CHECK_FUNCS(strdup strstr strtoul)
+
+dnl Define sig_atomic_t to int if it's not available.
+AC_CHECK_TYPE([sig_atomic_t],[],[
+	AC_DEFINE([sig_atomic_t],[int],
+		[Define to 'int' if <signal.h> does not define.])
+	],[
+	#if HAVE_SIGNAL_H
+	#include <signal.h>
+	#endif
+	])
 
 dnl socklen_t check - from curl
 AC_CHECK_TYPE([socklen_t], ,[
